prevent about pane content from overlapping right side
[#42394525]

--- a/src/sass/lab/_application.sass
+++ b/src/sass/lab/_application.sass
@@ -206,7 +206,7 @@ $embeddable-pane-font-size: 1.3em
   font-size: $embeddable-pane-font-size
   display: inline-block
   overflow: auto
-  width: 95%
+  width: 90%
   max-height: 18em
   a
     text-decoration: none
